--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -24,6 +25,28 @@
         <p>I joined AltSchool so as to acquire a strong foundation in backend engineering, learn from top industry mentors and build hands-on experience through projects and collaborations. I also wanted a learning environment that is practical, immersive and community conscious driven and AltSchool provides just that and fits my zeal.  </p>
     </section>
 
+    <section>
+        <h2>My goals for the School of Engineering</h2>
+        <p>My goals for joining AltSchool School of Engineering are the following;</p>
+        <ul>
+            <li>Master software engineering and development technologies like Javascript, Node.js, Python, SQL and APIs</li>
+            <li>Build scalable and secure web applications</li>
+            <li>Collaborate on open-source projects, platforms and team-based systems</li>
+            <li>Become industry-ready and land a backend engineering role by the time of graduation</li>
+            <li>Contribute my quota meaningfully to Africa's growing tech ecosystem</li>
+        </ul>
+    </section>
+    <section>
+        <h2>My goals for the School of Engineering</h2>
+        <p>My goals for joining AltSchool School of Engineering are the following;</p>
+        <ul>
+            <li>Master software engineering and development technologies like Javascript, Node.js, Python, SQL and APIs</li>
+            <li>Build scalable and secure web applications</li>
+            <li>Collaborate on open-source projects, platforms and team-based systems</li>
+            <li>Become industry-ready and land a backend engineering role by the time of graduation</li>
+            <li>Contribute my quota meaningfully to Africa's growing tech ecosystem</li>
+        </ul>
+    </section>
     <section>
         <h2>My goals for the School of Engineering</h2>
         <p>My goals for joining AltSchool School of Engineering are the following;</p>
